--- a/public/css/extra.css
+++ b/public/css/extra.css
@@ -10,9 +10,15 @@
   font-weight: bold;
 }
 
+[data-md-color-scheme=slate] {
+  --md-primary-fg-color:        #3AAC59;
+  --md-accent-fg-color:        #3AAC59;
+}
+
 body {
   font-family: "8bitOperator";
   font-size: 1em;
+  
 }
 
 /*
@@ -26,6 +32,20 @@ body {
     max-width: 1600px;
 }
 
+.md-header {
+  background-image: url("../include/background-overgrown-temple-pixelated-cropped.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 50% 0px;
+
+
+}
+
+.md-ellipsis {
+  text-shadow: 1px 1px var(--md-accent-fg-color);
+  font-weight: bold;
+  font-size:1.4em;
+}
 
 .md-header__button.md-logo :-webkit-any(img,svg) {
     height: 3rem;
@@ -38,6 +58,21 @@ body {
 .md-tabs {
   box-shadow: 0 0 0.2rem rgb(0 0 0 / 10%), 0 0.2rem 0.4rem var(--md-typeset-table-color);
   transition: transform .25s cubic-bezier(.1,.7,.1,1),box-shadow .25s;
+  background-image: url("../include/background-overgrown-temple-pixelated-cropped.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 50% 0px;
+  text-shadow: 2px 2px 2px var(--md-accent-fg-color);
+  font-weight: bold;
+  
+}
+
+.md-tabs__list{
+  background-color: var(--md-default-bg-color--light);
+}
+
+.md-tabs__link {
+  font-size: 0.9rem;
 }
 
 .md-header--shadow {
@@ -52,10 +87,49 @@ body {
   --md-primary-fg-color--dark:  #90030C;*/
 }
 
+
+/*
 [data-md-color-scheme=slate] {
-  --md-primary-fg-color:        #3AAC59;
-  --md-accent-fg-color:        #3AAC59;
+  --md-hue: 232;
+  --md-default-fg-color: hsla(var(--md-hue),75%,95%,1);
+  --md-default-fg-color--light: hsla(var(--md-hue),75%,90%,0.62);
+  --md-default-fg-color--lighter: hsla(var(--md-hue),75%,90%,0.32);
+  --md-default-fg-color--lightest: hsla(var(--md-hue),75%,90%,0.12);
+  --md-default-bg-color: hsla(var(--md-hue),15%,21%,1);
+  --md-default-bg-color--light: hsla(var(--md-hue),15%,21%,0.54);
+  --md-default-bg-color--lighter: hsla(var(--md-hue),15%,21%,0.26);
+  --md-default-bg-color--lightest: hsla(var(--md-hue),15%,21%,0.07);
+  --md-code-fg-color: hsla(var(--md-hue),18%,86%,1);
+  --md-code-bg-color: hsla(var(--md-hue),15%,15%,1);
+  --md-code-hl-color: rgba(66,135,255,.15);
+  --md-code-hl-number-color: #e6695b;
+  --md-code-hl-special-color: #f06090;
+  --md-code-hl-function-color: #c973d9;
+  --md-code-hl-constant-color: #9383e2;
+  --md-code-hl-keyword-color: #6791e0;
+  --md-code-hl-string-color: #2fb170;
+  --md-code-hl-name-color: var(--md-code-fg-color);
+  --md-code-hl-operator-color: var(--md-default-fg-color--light);
+  --md-code-hl-punctuation-color: var(--md-default-fg-color--light);
+  --md-code-hl-comment-color: var(--md-default-fg-color--light);
+  --md-code-hl-generic-color: var(--md-default-fg-color--light);
+  --md-code-hl-variable-color: var(--md-default-fg-color--light);
+  --md-typeset-color: var(--md-default-fg-color);
+  --md-typeset-a-color: var(--md-primary-fg-color);
+  --md-typeset-mark-color: rgba(66,135,255,.3);
+  --md-typeset-kbd-color: hsla(var(--md-hue),15%,94%,0.12);
+  --md-typeset-kbd-accent-color: hsla(var(--md-hue),15%,94%,0.2);
+  --md-typeset-kbd-border-color: hsla(var(--md-hue),15%,14%,1);
+  --md-typeset-table-color: hsla(var(--md-hue),75%,95%,0.12);
+  --md-admonition-fg-color: var(--md-default-fg-color);
+  --md-admonition-bg-color: var(--md-default-bg-color);
+  --md-footer-bg-color: hsla(var(--md-hue),15%,12%,0.87);
+  --md-footer-bg-color--dark: hsla(var(--md-hue),15%,10%,1);
+  --md-shadow-z1: 0 0.2rem 0.5rem rgba(0,0,0,.2),0 0 0.05rem rgba(0,0,0,.1);
+  --md-shadow-z2: 0 0.2rem 0.5rem rgba(0,0,0,.3),0 0 0.05rem rgba(0,0,0,.25);
+  --md-shadow-z3: 0 0.2rem 0.5rem rgba(0,0,0,.4),0 0 0.05rem rgba(0,0,0,.35);
 }
+*/
 
 .gallery {
   object-fit: cover;
@@ -69,7 +143,7 @@ div.lightgallery {
 }
 
 img.game_item {
-  width: 150px;
+  width: 250px;
 }
 
 @font-face {
@@ -117,10 +191,27 @@ table.item_table span{
   }
 
   img.game_item {
-    width: 100%;
+    max-width: 300px;
+    display: block;
+    margin: 0 auto;
+    
   }
 
   img.story_pic {
+    margin:0em;
+    border:10px solid var(--md-typeset-table-color);
+    max-width:100%;
+  }
+
+  img.full_pic {
+    margin:0em;
+    border:10px solid var(--md-typeset-table-color);
+    max-width:400px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  img.item_pic {
     margin:0em;
     border:10px solid var(--md-typeset-table-color);
     max-width:100%;
@@ -178,6 +269,13 @@ table.item_table span{
 }
 
 @media (min-width: 800px) {
+
+  img.full_pic {
+    margin:0em;
+    border:10px solid var(--md-typeset-table-color);
+    max-width:800px;
+  }
+
   img.story_pic {
     margin:0em;
     border:10px solid var(--md-typeset-table-color);
