--- a/public/css/extra.css
+++ b/public/css/extra.css
@@ -383,9 +383,11 @@ img.black_market {
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
+/*
 .market-box:hover .market-box-inner {
   transform: rotateY(180deg);
 }
+*/
 
 /* Position the front and back side */
 .market-box-front, .market-box-back {
