--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -244,7 +244,29 @@ img.black_market {
   
 }
 
+div.item_thumbnail {
+  width:200px; height:400px; 
+  float:left;
+  margin:10px;
+  border: 2px solid var(--md-typeset-table-color);
+}
 
+div.item_thumbnail div {
+  border-top: 2px solid var(--md-typeset-table-color);
+  margin-bottom: 2px;
+}
+
+div.item_thumbnail_detail {
+  width:300px; height:600px; 
+  float:left;
+  margin:10px;
+  border: 2px solid var(--md-typeset-table-color);
+}
+
+div.item_thumbnail_detail div {
+  border-top: 2px solid var(--md-typeset-table-color);
+  margin-bottom: 2px;
+}
 
 @media (max-width: 699px) {
   img {
