--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -274,6 +274,17 @@ div.item_thumbnail {
   scrollbar-width: thin;
 }
 
+div.item_maximized {
+  width:100%; height:100%;
+  float:none;
+  clear:both;
+  margin:10px;
+  border: 2px solid var(--md-typeset-table-color);
+  overflow-y: auto;
+  scrollbar-color: var(--md-typeset-table-color);
+  scrollbar-width: thin;
+}
+
 div.item_type_thumbnail {
   width:300px; height:400px; 
   float:left;
