--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -274,6 +274,10 @@ div.item_thumbnail {
   scrollbar-width: thin;
 }
 
+div.item_thumbnail img {
+  max-width:300px; max-height:300px;
+}
+
 div.item_maximized {
   width:100%; height:100%;
   float:none;
@@ -285,8 +289,16 @@ div.item_maximized {
   scrollbar-width: thin;
 }
 
+div.item_maximized div {
+  border: 1px solid var(--md-typeset-table-color);
+  margin-bottom: 2px;
+  width:300px; float: left;
+}
+
 div.item_maximized img {
   float: left;
+  margin-right: 20px;
+  max-width:300px; max-height:300px;
 }
 
 div.item_type_thumbnail {
